style: define tailwind classes to avoid redundant codes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -139,3 +139,12 @@ button {
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .custom-table-cells {
+    @apply bg-secondary p-5;
+  }
+  .custom-table-cells-unit {
+    @apply text-muted-foreground ml-1 text-[12px];
+  }
+}
